--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,10 +74,12 @@ flutter:
   # https://flutter.dev/assets-and-images/#from-packages
 
   assets:
-    - assets/images/default_img.png
-    - assets/images/logo.png
-    - assets/images/welcome.png
-    - assets/file/flare_flutter_logo_.flr
+    - assets/images/
+    - assets/file/
+#    - assets/images/default_img.png
+#    - assets/images/logo.png
+#    - assets/images/welcome.png
+#    - assets/file/flare_flutter_logo_.flr
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
