--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_local_notifications: ^0.7.1+3
   permission_handler: ^3.1.0
   flare_flutter: ^1.5.2
+  cached_network_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
